objects/Prescreen_Event__e.object
<CustomObject>
    <description>Platform Event Channel for prescreen events</description>
    <fields>
        <fullName>Changes_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the prescreener made any changes to the inspection</description>
        <label>Changes Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Completion Date of the prescreen record</description>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <description>Created Date of the prescreen record</description>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealership_Id__c</fullName>
        <description>Dealership associated with the prescreen</description>
        <label>Dealership Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Id__c</fullName>
        <description>The unique identifier for the inspection associated with the prescreen</description>
        <label>Inspection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspector_Identity_Id__c</fullName>
        <description>Inspector Identity Id</description>
        <label>Inspector Identity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <description>Vehicle Make</description>
        <label>Make</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Vehicle Model</description>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Comments__c</fullName>
        <description>List of all prescreen comments from the CR Question sub object</description>
        <label>Prescreen Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prescreen_Id__c</fullName>
        <description>The unique identifier for this prescreen record</description>
        <label>Prescreen Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Status__c</fullName>
        <description>Status of the prescreen</description>
        <label>Prescreen Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Sub_Status__c</fullName>
        <description>The Status of the prescreen beyond just approved or rejected</description>
        <label>Prescreen Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreener_Id__c</fullName>
        <description>Identifier of the Prescreen user</description>
        <label>Prescreener Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Id__c</fullName>
        <description>Vehicle Id associated with the Prescreen</description>
        <label>Vehicle Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin__c</fullName>
        <description>Vin of the vehicle</description>
        <label>Vin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Vehicle Year</description>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <label>event type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Prescreen Event</label>
    <pluralLabel>Prescreen Events</pluralLabel>
</CustomObject>